# sdl-game-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  readme.md
cmake/: StaticAnalyzers.cmake
cmake/modules/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake
include/: Asset.h  AssetFactory.h  Audio.h  Commons.h  Dot.h  EnumUtils.h  LTexture.h  Logger.h  Menu.h  Particle.h  ParticleEngines.h  Program.h  ProgramFactory.h  ProgramManager.h  ProgramSwitcher.h  ProgramType.h  ProgramTypeEnum.h  Registrable.h  Registry.h  Renderable.cpp  Renderable.h  Renderer.h  SDL_Helpers.h  SDL_image_platform.h  SDL_platform.h  SDL_ttf_platform.h  Strings.h  System.h  SystemFactory.h
include/enum/: ProgramState.h  ProgramTypeEnum.h  State.h  SystemType.h
src/: AssetFactory.cpp  Audio.cpp  Commons.cpp  Dot.cpp  LTexture.cpp  Logger.cpp  Menu.cpp  Particle.cpp  ParticleEngines.cpp  Program.cpp  ProgramFactory.cpp  ProgramManager.cpp  ProgramSwitcher.cpp  ProgramType.cpp  Registry.cpp  Renderable.cpp  Renderer.cpp  SystemFactory.cpp  main.cpp
tests/: LoggerTest.cpp  RenderableTest.cpp  RendererTest.cpp
